--- a/lib/package.json
+++ b/lib/package.json
@@ -2,7 +2,7 @@
   "author": "Corno",
   "bin": {},
   "dependencies": {
-    "astn-handlers-api": "^0.5.0",
+    "astn-handlers-api": "^0.5.1",
     "astn-serializer-api": "^0.6.2",
     "pareto-runtime": "^0.22.0"
   },
@@ -24,5 +24,6 @@
     "url": "git+https://github.com/corno/astn-serializer.git"
   },
   "types": "dist/index.d.ts",
-  "version": "0.5.2"
+  "version": "0.5.2",
+  "content-fingerprint": "0086f216938938e74635a6a08fe8fd5baaf7ad98"
 }
