--- a/lib/package.json
+++ b/lib/package.json
@@ -2,9 +2,10 @@
   "author": "Corno",
   "bin": {},
   "dependencies": {
-    "astn-handlers-api": "^0.5.1",
+    "astn-handlers-api": "^0.6.0",
     "astn-serializer-api": "^0.6.3",
-    "pareto-runtime": "^0.22.0"
+    "pareto-lang-lib": "^0.7.0",
+    "pareto-runtime": "^0.23.0"
   },
   "files": [
     "dist",
@@ -25,5 +26,5 @@
   },
   "types": "dist/index.d.ts",
   "version": "0.5.3",
-  "content-fingerprint": "a9ec15daf59fa8049700dc5d307af82c2e99fd21"
+  "content-fingerprint": "f15123d9f0b4b949f627e90a4da07f780b00cab3"
 }
