--- a/lib/package.json
+++ b/lib/package.json
@@ -4,8 +4,8 @@
   "dependencies": {
     "astn-handlers-api": "^0.6.0",
     "astn-serializer-api": "^0.6.4",
-    "pareto-lang-lib": "^0.8.0",
-    "pareto-runtime": "^0.24.0"
+    "pareto-lib-core": "^0.5.0",
+    "pareto-runtime": "^0.25.0"
   },
   "files": [
     "dist",
@@ -26,5 +26,5 @@
   },
   "types": "dist/index.d.ts",
   "version": "0.7.0",
-  "content-fingerprint": "8386c3214bd254a8e961329904d4d836e0a0de9c"
+  "content-fingerprint": "5b02d06297ff6ac6960c6b1ddcbb685b6c6bce88"
 }
